--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://Nareshkumarbalamurugan.github.io/metric-master-pro",
+  "homepage": "https://converterpro.online",
   "private": true,
   "version": "0.0.0",
   "type": "module",
