--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,44 +1,50 @@
-
 {
   "name": "ConverterPro - Universal Unit Converter",
   "short_name": "ConverterPro",
-  "description": "Convert between 200+ units across 17 categories with real-time currency rates",
+  "description": "Convert between 200+ units across 18 categories including area, length, weight, temperature, currency, and gold rates",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1e3a8a",
-  "theme_color": "#2563eb",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    }
+  ],
   "orientation": "portrait",
   "scope": "/",
   "lang": "en",
-  "icons": [
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
+  "categories": [
+    "utilities",
+    "productivity",
+    "education"
   ],
-  "categories": ["utilities", "productivity", "education"],
   "shortcuts": [
     {
       "name": "Length Converter",
       "short_name": "Length",
       "description": "Convert length units",
       "url": "/?category=length",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Currency Converter",
       "short_name": "Currency",
       "description": "Convert currencies with real-time rates",
       "url": "/?category=currency",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ]
 }
