--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,16 +13,10 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ],
   "orientation": "portrait",
@@ -41,7 +35,7 @@
       "url": "/?category=length",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/favicon.svg",
           "sizes": "192x192"
         }
       ]
@@ -53,7 +47,7 @@
       "url": "/?category=currency",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/favicon.svg",
           "sizes": "192x192"
         }
       ]
