--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,10 +13,16 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/favicon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "orientation": "portrait",
@@ -35,7 +41,7 @@
       "url": "/?category=length",
       "icons": [
         {
-          "src": "/favicon.svg",
+          "src": "/icon-192.png",
           "sizes": "192x192"
         }
       ]
@@ -47,7 +53,7 @@
       "url": "/?category=currency",
       "icons": [
         {
-          "src": "/favicon.svg",
+          "src": "/icon-192.png",
           "sizes": "192x192"
         }
       ]
