--- a/manifest.json
+++ b/manifest.json
@@ -6,25 +6,6 @@
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "icons": [
-    {
-      "src": "/favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
   "orientation": "portrait",
   "scope": "/",
   "lang": "en",
@@ -38,25 +19,13 @@
       "name": "Length Converter",
       "short_name": "Length",
       "description": "Convert length units",
-      "url": "/?category=length",
-      "icons": [
-        {
-          "src": "/icon-192.png",
-          "sizes": "192x192"
-        }
-      ]
+      "url": "/?category=length"
     },
     {
       "name": "Currency Converter",
       "short_name": "Currency",
       "description": "Convert currencies with real-time rates",
-      "url": "/?category=currency",
-      "icons": [
-        {
-          "src": "/icon-192.png",
-          "sizes": "192x192"
-        }
-      ]
+      "url": "/?category=currency"
     }
   ]
 }
