--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy to GitHub Pages
 
 on:
@@ -30,6 +29,9 @@ jobs:
           
       - name: Install dependencies
         run: npm ci
+        
+      - name: Remove favicon
+        run: rm -f public/favicon.ico dist/favicon.ico || true
         
       - name: Build
         run: npm run build
